HootServices: Auth: MapsResource
refs #2610

* further restrict actions on maps -> from visibility based permissions to ownership based
* fix bug w/ dataset delete
    * improve DeleteMapResourcesCommand to account for mapid & map display_name
* add fkeys to folder_map_mappings for cascade delete
    * advance database migration #